Tweaks for working with flat forms rather than those managed through javascript